new GWT 2.12.2 and SmartGWT 14.1p